--- a/404.html
+++ b/404.html
@@ -2,19 +2,19 @@
 <head>
 <meta charset=utf-8>
 <title>404 Page not found</title>
-<base href=https://blog.incubyteco.co/>
+<base href=https://incubyteco.github.io/>
 <meta name=author content="Incubyte">
 <meta name=generator content="Hugo 0.86.0">
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel=stylesheet>
-<link rel="shortcut icon" href=https://blog.incubyteco.co/images/favicon.png type=image/x-icon>
-<link rel=icon href=https://blog.incubyteco.co/images/favicon.png type=image/x-icon>
+<link rel="shortcut icon" href=https://incubyteco.github.io/images/favicon.png type=image/x-icon>
+<link rel=icon href=https://incubyteco.github.io/images/favicon.png type=image/x-icon>
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=5">
 <meta name=msapplication-TileColor content="#5cc5d5">
 <meta name=theme-color content="#fff">
-<meta property="og:image" content="https://blog.incubyteco.co/images/logo.png">
-<meta name=twitter:image content="https://blog.incubyteco.co/images/logo.png">
+<meta property="og:image" content="https://incubyteco.github.io/images/logo.png">
+<meta name=twitter:image content="https://incubyteco.github.io/images/logo.png">
 <meta name=twitter:card content="summary_large_image">
 <meta property="og:image:width" content="1847">
 <meta property="og:image:height" content="511">
@@ -24,7 +24,7 @@
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="Incubyte Blog">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://blog.incubyteco.co/404.html"><meta property="og:site_name" content="Incubyte Blog">
+<meta property="og:url" content="https://incubyteco.github.io/404.html"><meta property="og:site_name" content="Incubyte Blog">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="Incubyte Blog">
@@ -112,7 +112,7 @@ Work
 <div class=container>
 <div class=row>
 <div class="col-md-3 col-sm-6 mb-5">
-<a class="d-block h3 mb-3" href=https://blog.incubyteco.co/>
+<a class="d-block h3 mb-3" href=https://incubyteco.github.io/>
 <img width=200px class=img-fluid src=/images/logo.svg alt="Incubyte Blog">
 </a>
 <p class=mb-4>Crafting Software Products For Today and Tomorrow.</p>
