--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <head>
 <meta charset=utf-8>
 <title>Incubyte Blog</title>
-<base href=https://blog.incubyteco.co/>
+<base href=https://incubyteco.github.io/>
 <meta name=author content="Incubyte">
 <meta name=generator content="Hugo 0.86.0">
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel=stylesheet>
-<link rel="shortcut icon" href=https://blog.incubyteco.co/images/favicon.png type=image/x-icon>
-<link rel=icon href=https://blog.incubyteco.co/images/favicon.png type=image/x-icon>
+<link rel="shortcut icon" href=https://incubyteco.github.io/images/favicon.png type=image/x-icon>
+<link rel=icon href=https://incubyteco.github.io/images/favicon.png type=image/x-icon>
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=5">
 <meta name=msapplication-TileColor content="#5cc5d5">
 <meta name=theme-color content="#fff">
-<meta property="og:image" content="https://blog.incubyteco.co/images/logo.png">
-<meta name=twitter:image content="https://blog.incubyteco.co/images/logo.png">
+<meta property="og:image" content="https://incubyteco.github.io/images/logo.png">
+<meta name=twitter:image content="https://incubyteco.github.io/images/logo.png">
 <meta name=twitter:card content="summary_large_image">
 <meta property="og:image:width" content="1847">
 <meta property="og:image:height" content="511">
@@ -24,7 +24,7 @@
 <meta property="og:title" content>
 <meta property="og:description" content="Incubyte Blog">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://blog.incubyteco.co/"><meta property="og:site_name" content="Incubyte Blog">
+<meta property="og:url" content="https://incubyteco.github.io/"><meta property="og:site_name" content="Incubyte Blog">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content>
 <meta name=twitter:description content="Incubyte Blog">
@@ -112,27 +112,27 @@ Work
 <div class="col-12 mb-5 pb-5">
 <article class="row align-items-center">
 <div class="col-md-6 mb-4 mb-md-0">
-<a href=https://blog.incubyteco.co/blog/why-incubyte/>
+<a href=https://incubyteco.github.io/blog/why-incubyte/>
 <img src=/images/2020/10/swapnil-dwivedi-w46tRF64qNc-unsplash.jpg alt="Why Incubyte?" class="img-fluid rounded-lg w-100">
 </a>
 </div>
 <div class=col-md-6>
-<h2><a href=https://blog.incubyteco.co/blog/why-incubyte/ title="Why Incubyte?" class=post-title>Why Incubyte?</a></h2>
+<h2><a href=https://incubyteco.github.io/blog/why-incubyte/ title="Why Incubyte?" class=post-title>Why Incubyte?</a></h2>
 <span class="mb-1 badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
 <span class="mb-1 badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
 <p class=card-text>Quality is usually an implicit requirement when it comes to developing software. Users ask for a beautiful UI, outstanding performance, and the functionality they need, but quality is never on the list - it is just expected!</p>
-<a href=https://blog.incubyteco.co/blog/why-incubyte/ title=" -
+<a href=https://incubyteco.github.io/blog/why-incubyte/ title=" -
                         Why Incubyte?" class="btn btn-main-art btn-primary">Read more</a>
 </div>
 </article>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <article class="card border-0">
-<a href=https://blog.incubyteco.co/blog/one-year-of-incubyte/>
+<a href=https://incubyteco.github.io/blog/one-year-of-incubyte/>
 <img src=/images/2021/07/1-year-blog-01.jpg alt="One Year Of Pandemic & One Year Of Incubyte" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
-<h3><a href=https://blog.incubyteco.co/blog/one-year-of-incubyte/ title="One Year Of Pandemic & One Year Of Incubyte" class=post-title>One Year Of Pandemic & One Year Of Incubyte</a></h3>
+<h3><a href=https://incubyteco.github.io/blog/one-year-of-incubyte/ title="One Year Of Pandemic & One Year Of Incubyte" class=post-title>One Year Of Pandemic & One Year Of Incubyte</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
 <p class=card-text>It all started when— unbeknownst to the world, a series of lockdowns changed the way India Inc.
 </p>
@@ -141,11 +141,11 @@ Work
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <article class="card border-0">
-<a href=https://blog.incubyteco.co/blog/books-we-believe-should-be-on-your-bookshelf-and-read-them-too/>
+<a href=https://incubyteco.github.io/blog/books-we-believe-should-be-on-your-bookshelf-and-read-them-too/>
 <img src=/images/2021/06/Picture1.jpg alt="12 Books Developers Must Read" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
-<h3><a href=https://blog.incubyteco.co/blog/books-we-believe-should-be-on-your-bookshelf-and-read-them-too/ title="12 Books Developers Must Read" class=post-title>12 Books Developers Must Read</a></h3>
+<h3><a href=https://incubyteco.github.io/blog/books-we-believe-should-be-on-your-bookshelf-and-read-them-too/ title="12 Books Developers Must Read" class=post-title>12 Books Developers Must Read</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/careers>Careers</a></span>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
 <p class=card-text>Books are a massive source of knowledge. Before we list all the books here, we want to discuss why we think it&rsquo;s essential for programmers to read them.
@@ -155,11 +155,11 @@ Work
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <article class="card border-0">
-<a href=https://blog.incubyteco.co/blog/clean-agile-with-uncle-bob-a-summary/>
+<a href=https://incubyteco.github.io/blog/clean-agile-with-uncle-bob-a-summary/>
 <img src=/images/2021/06/Picture1-clean-agile-1.jpg alt="Clean Agile with Uncle Bob: A Summary" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
-<h3><a href=https://blog.incubyteco.co/blog/clean-agile-with-uncle-bob-a-summary/ title="Clean Agile with Uncle Bob: A Summary" class=post-title>Clean Agile with Uncle Bob: A Summary</a></h3>
+<h3><a href=https://incubyteco.github.io/blog/clean-agile-with-uncle-bob-a-summary/ title="Clean Agile with Uncle Bob: A Summary" class=post-title>Clean Agile with Uncle Bob: A Summary</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
 <p class=card-text>An overview: I recently attended an online session on Clean Agile, organized by O’Reilly publication.And guess who was the speaker?
 </p>
@@ -168,11 +168,11 @@ Work
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <article class="card border-0">
-<a href=https://blog.incubyteco.co/blog/how-to-contribute-to-open-source-project-a-beginners-guide/>
+<a href=https://incubyteco.github.io/blog/how-to-contribute-to-open-source-project-a-beginners-guide/>
 <img src=/images/2021/06/1_Making-your-first-oss-project.png alt="How to contribute to open-source project: A beginner's guide" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
-<h3><a href=https://blog.incubyteco.co/blog/how-to-contribute-to-open-source-project-a-beginners-guide/ title="How to contribute to open-source project: A beginner's guide" class=post-title>How to contribute to open-source project: A beginner's guide</a></h3>
+<h3><a href=https://incubyteco.github.io/blog/how-to-contribute-to-open-source-project-a-beginners-guide/ title="How to contribute to open-source project: A beginner's guide" class=post-title>How to contribute to open-source project: A beginner's guide</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/open-source>Open Source</a></span>
 <p class=card-text>Are you a first-time contributor? Are you wondering how to start contributing to OSS? Well, this guide is made for you.
 </p>
@@ -181,11 +181,11 @@ Work
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <article class="card border-0">
-<a href=https://blog.incubyteco.co/blog/benefits-and-challenges-of-open-source-development/>
+<a href=https://incubyteco.github.io/blog/benefits-and-challenges-of-open-source-development/>
 <img src=/images/2021/05/1.oss-1.jpg alt="Benefits and Challenges of Open-Source Development" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
-<h3><a href=https://blog.incubyteco.co/blog/benefits-and-challenges-of-open-source-development/ title="Benefits and Challenges of Open-Source Development" class=post-title>Benefits and Challenges of Open-Source Development</a></h3>
+<h3><a href=https://incubyteco.github.io/blog/benefits-and-challenges-of-open-source-development/ title="Benefits and Challenges of Open-Source Development" class=post-title>Benefits and Challenges of Open-Source Development</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/open-source>Open Source</a></span>
 <p class=card-text>Open-source software (OSS) is the holy grail for developers. It is a hub of innovation through intense collaboration in this era of agile software development.
 </p>
@@ -194,11 +194,11 @@ Work
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <article class="card border-0">
-<a href=https://blog.incubyteco.co/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/>
+<a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/>
 <img src=/images/2021/04/technical-debt.jpg alt="Do not assume that technical debt is a problem with your code" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
-<h3><a href=https://blog.incubyteco.co/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/ title="Do not assume that technical debt is a problem with your code" class=post-title>Do not assume that technical debt is a problem with your code</a></h3>
+<h3><a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/ title="Do not assume that technical debt is a problem with your code" class=post-title>Do not assume that technical debt is a problem with your code</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
 <p class=card-text>Ever saw SonarQube laden with thousands of maintainability and security issues? Looking at those dashboards, we often believe we&rsquo;re looking at the code&rsquo;s state, but there is more to it.
@@ -208,11 +208,11 @@ Work
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <article class="card border-0">
-<a href=https://blog.incubyteco.co/blog/techniques-for-an-agile-team/>
+<a href=https://incubyteco.github.io/blog/techniques-for-an-agile-team/>
 <img src=/images/2021/01/Agile-Scrum-Methodology-13-Best-Practices-For-Agile-Teams.jpg alt="Ideas for Successful Agile Teams" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
-<h3><a href=https://blog.incubyteco.co/blog/techniques-for-an-agile-team/ title="Ideas for Successful Agile Teams" class=post-title>Ideas for Successful Agile Teams</a></h3>
+<h3><a href=https://incubyteco.github.io/blog/techniques-for-an-agile-team/ title="Ideas for Successful Agile Teams" class=post-title>Ideas for Successful Agile Teams</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/getting-started>Getting Started</a></span>
@@ -223,11 +223,11 @@ Work
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <article class="card border-0">
-<a href=https://blog.incubyteco.co/blog/notalltestsarethesame/>
+<a href=https://incubyteco.github.io/blog/notalltestsarethesame/>
 <img src="https://images.unsplash.com/photo-1570215170761-f056128eda48?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxMTc3M3wwfDF8c2VhcmNofDN8fHFhfGVufDB8fHw&ixlib=rb-1.2.1&q=80&w=2000" alt="Not All Tests are the Same" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
-<h3><a href=https://blog.incubyteco.co/blog/notalltestsarethesame/ title="Not All Tests are the Same" class=post-title>Not All Tests are the Same</a></h3>
+<h3><a href=https://incubyteco.github.io/blog/notalltestsarethesame/ title="Not All Tests are the Same" class=post-title>Not All Tests are the Same</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
 <p class=card-text>On multiple occasions, I have worked on projects where I learned how critical testing is and that not all tests are the same.
 </p>
@@ -236,11 +236,11 @@ Work
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <article class="card border-0">
-<a href=https://blog.incubyteco.co/blog/remote-onboarding-and-immersion/>
+<a href=https://incubyteco.github.io/blog/remote-onboarding-and-immersion/>
 <img src=/images/2021/05/1_Coverpage.jpg alt="Remote Onboarding & Immersion at Incubyte" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
-<h3><a href=https://blog.incubyteco.co/blog/remote-onboarding-and-immersion/ title="Remote Onboarding & Immersion at Incubyte" class=post-title>Remote Onboarding & Immersion at Incubyte</a></h3>
+<h3><a href=https://incubyteco.github.io/blog/remote-onboarding-and-immersion/ title="Remote Onboarding & Immersion at Incubyte" class=post-title>Remote Onboarding & Immersion at Incubyte</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/careers>Careers</a></span>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/jobs>Jobs</a></span>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
@@ -252,11 +252,11 @@ Work
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <article class="card border-0">
-<a href=https://blog.incubyteco.co/blog/the-battle-of-source-control/>
+<a href=https://incubyteco.github.io/blog/the-battle-of-source-control/>
 <img src=/images/2020/10/The-Battle-2.jpg alt="The Battle of Source Control" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
-<h3><a href=https://blog.incubyteco.co/blog/the-battle-of-source-control/ title="The Battle of Source Control" class=post-title>The Battle of Source Control</a></h3>
+<h3><a href=https://incubyteco.github.io/blog/the-battle-of-source-control/ title="The Battle of Source Control" class=post-title>The Battle of Source Control</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
 <p class=card-text>git pull origin develop git checkout -b feature/shiny-new-branch It&rsquo;s the start of a sprint, and you have picked up a new User Story.
 </p>
@@ -265,11 +265,11 @@ Work
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <article class="card border-0">
-<a href=https://blog.incubyteco.co/blog/why-incubyte/>
+<a href=https://incubyteco.github.io/blog/why-incubyte/>
 <img src=/images/2020/10/swapnil-dwivedi-w46tRF64qNc-unsplash.jpg alt="Why Incubyte?" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
-<h3><a href=https://blog.incubyteco.co/blog/why-incubyte/ title="Why Incubyte?" class=post-title>Why Incubyte?</a></h3>
+<h3><a href=https://incubyteco.github.io/blog/why-incubyte/ title="Why Incubyte?" class=post-title>Why Incubyte?</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
 <p class=card-text>Quality is usually an implicit requirement when it comes to developing software. Users ask for a beautiful UI, outstanding performance, and the functionality they need, but quality is never on the list - it is just expected!
@@ -279,11 +279,11 @@ Work
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <article class="card border-0">
-<a href=https://blog.incubyteco.co/blog/release-code-without-automated-tests/>
+<a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/>
 <img src=/images/2020/09/automated-tests.jpg alt="!Release code without automated tests" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
-<h3><a href=https://blog.incubyteco.co/blog/release-code-without-automated-tests/ title="!Release code without automated tests" class=post-title>!Release code without automated tests</a></h3>
+<h3><a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/ title="!Release code without automated tests" class=post-title>!Release code without automated tests</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
 <p class=card-text>Most projects that I see facing serious problems lack tests. You should write tests for two things
 </p>
@@ -321,7 +321,7 @@ Work
 <div class=container>
 <div class=row>
 <div class="col-md-3 col-sm-6 mb-5">
-<a class="d-block h3 mb-3" href=https://blog.incubyteco.co/>
+<a class="d-block h3 mb-3" href=https://incubyteco.github.io/>
 <img width=200px class=img-fluid src=/images/logo.svg alt="Incubyte Blog">
 </a>
 <p class=mb-4>Crafting Software Products For Today and Tomorrow.</p>
